Segfault starting blender #79347

Closed
opened 2020-07-28 15:10:41 +02:00 by Georg K · 6 comments

System Information
Operating system: Linux-5.4.44-1-MANJARO-x86_64-with-glibc2.29 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.4.44-1-MANJARO, LLVM 10.0.0) X.Org 4.5 (Core Profile) Mesa 20.0.7

Blender Version
Broken: version: Blender 2.91.0, Commit date: 2020-07-28 12:55, Hash bc0b75ea37
Worked: version: 2.91.0 Alpha, branch: master, commit date: 2020-07-26 15:28, hash: 9905db5557

bisecting identified the problematic commit:
b296b68ff2 is the first bad commit, Author: Clément Foucault

Short description of error
Although using make clean and deleting the build folder for a really fresh build, blender won't start.

blender --factory-startup

does not help.

Exact steps for others to reproduce the error

  • Start blender
  • blender does not start
# Blender 2.91.0, Commit date: 2020-07-28 12:55, Hash bc0b75ea3732

# backtrace
/home/georg/Programme/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x3e9c613]
/home/georg/Programme/blender-git/build_linux/bin/blender() [0xb5e28e]
/usr/lib/libc.so.6(+0x3c3e0) [0x7feb576dd3e0]
/home/georg/Programme/blender-git/build_linux/bin/blender(GPU_texture_opengl_bindcode+0) [0x3da2310]
/home/georg/Programme/blender-git/build_linux/bin/blender(GPU_framebuffer_bind+0x330) [0x3d92100]
/home/georg/Programme/blender-git/build_linux/bin/blender(gpu_extensions_init+0x30c) [0x3d9105c]
/home/georg/Programme/blender-git/build_linux/bin/blender(GPU_init+0x22) [0x3d95e32]
/home/georg/Programme/blender-git/build_linux/bin/blender() [0xe392dd]
/home/georg/Programme/blender-git/build_linux/bin/blender(wm_window_ghostwindows_ensure+0x2d) [0xe394fd]
/home/georg/Programme/blender-git/build_linux/bin/blender(WM_check+0x5e) [0xe0e62e]
/home/georg/Programme/blender-git/build_linux/bin/blender(wm_homefile_read+0x3e3) [0xe1cf63]
/home/georg/Programme/blender-git/build_linux/bin/blender(WM_init+0x137) [0xe214b7]
/home/georg/Programme/blender-git/build_linux/bin/blender(main+0x2c5) [0xb314a5]
/usr/lib/libc.so.6(__libc_start_main+0xf2) [0x7feb576c8002]
/home/georg/Programme/blender-git/build_linux/bin/blender(_start+0x2e) [0xb5a87e]
**System Information** Operating system: Linux-5.4.44-1-MANJARO-x86_64-with-glibc2.29 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.4.44-1-MANJARO, LLVM 10.0.0) X.Org 4.5 (Core Profile) Mesa 20.0.7 **Blender Version** Broken: version: Blender 2.91.0, Commit date: 2020-07-28 12:55, Hash bc0b75ea3732 Worked: version: 2.91.0 Alpha, branch: master, commit date: 2020-07-26 15:28, hash: `9905db5557` bisecting identified the problematic commit: b296b68ff2dc92da2fd7f96c0c27966a9f7e9c5a is the first bad commit, Author: Clément Foucault **Short description of error** Although using make clean and deleting the build folder for a really fresh build, blender won't start. ``` blender --factory-startup ``` does not help. **Exact steps for others to reproduce the error** - Start blender - blender does not start ``` # Blender 2.91.0, Commit date: 2020-07-28 12:55, Hash bc0b75ea3732 # backtrace /home/georg/Programme/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x3e9c613] /home/georg/Programme/blender-git/build_linux/bin/blender() [0xb5e28e] /usr/lib/libc.so.6(+0x3c3e0) [0x7feb576dd3e0] /home/georg/Programme/blender-git/build_linux/bin/blender(GPU_texture_opengl_bindcode+0) [0x3da2310] /home/georg/Programme/blender-git/build_linux/bin/blender(GPU_framebuffer_bind+0x330) [0x3d92100] /home/georg/Programme/blender-git/build_linux/bin/blender(gpu_extensions_init+0x30c) [0x3d9105c] /home/georg/Programme/blender-git/build_linux/bin/blender(GPU_init+0x22) [0x3d95e32] /home/georg/Programme/blender-git/build_linux/bin/blender() [0xe392dd] /home/georg/Programme/blender-git/build_linux/bin/blender(wm_window_ghostwindows_ensure+0x2d) [0xe394fd] /home/georg/Programme/blender-git/build_linux/bin/blender(WM_check+0x5e) [0xe0e62e] /home/georg/Programme/blender-git/build_linux/bin/blender(wm_homefile_read+0x3e3) [0xe1cf63] /home/georg/Programme/blender-git/build_linux/bin/blender(WM_init+0x137) [0xe214b7] /home/georg/Programme/blender-git/build_linux/bin/blender(main+0x2c5) [0xb314a5] /usr/lib/libc.so.6(__libc_start_main+0xf2) [0x7feb576c8002] /home/georg/Programme/blender-git/build_linux/bin/blender(_start+0x2e) [0xb5a87e] ```
Author

Added subscriber: @georgK

Added subscriber: @georgK
Georg K changed title from Segfault starting blender to LineArt: Segfault starting blender 2020-07-28 15:31:35 +02:00
Author

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Georg K changed title from LineArt: Segfault starting blender to Segfault starting blender 2020-07-28 15:54:17 +02:00

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 848cbe889b

This issue was referenced by 848cbe889b6330822d8bbf56a0bc7e755e153fd1

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Clément Foucault self-assigned this 2020-07-30 19:44:39 +02:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:21:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79347
No description provided.