Fix T79347 GPU: Segfault starting blender